new calculators added and header footer also

--- a/asmevalveflowareaestimator.html
+++ b/asmevalveflowareaestimator.html
@@ -625,6 +625,9 @@ strong{
         <li><strong>P<sub>B</sub></strong> – Backpressure (psi a).</li>
 
     </ul>
+    <br>
+    <p><strong>ASME (API RP 520)</strong> stands for American Society of Mechanical Engineers (American Petroleum Institute Recommended Practice 520). It provides guidelines for designing and installing pressure relief systems to protect equipment from excessive pressure in industries like oil & gas and chemical processing.</p>
+
     <p><strong>Note:</strong> The constant 38 is a conversion factor that adjusts units in the equation, ensuring the calculated discharge area (A<sub>o</sub>) is in mm² when using US gal/min for flow rate.</p>
 
 
