--- a/safetycalculatorminimumflowarea.html
+++ b/safetycalculatorminimumflowarea.html
@@ -170,7 +170,7 @@
       background-color: #f5f5f5;
     }
     .calculator-container {
-      max-width: 1000px;
+      max-width: 1200px;
       margin: 20px auto;
       padding: 20px;
       background: #ffffff;
@@ -623,7 +623,8 @@ strong{
         <li><strong>Z:</strong> Compressibility factor (accounts for real gas behavior).</li>
         <li><strong>0.1791:</strong> A constant derived from thermodynamic principles, used to normalize units and account for standard gas flow conditions in the equation.</li>
     </ul>
-
+    <br>
+     <p><strong>AD-Merkblatt </strong>(Arbeitsgemeinschaft Druckbehälter) is a German standard that provides guidelines for the design, construction, and testing of pressure vessels to ensure safety and compliance with European regulations.</p>
     <h3> Real-Life Applications:</h3>
     <ul>
         <li><strong>Industrial Safety Valves:</strong> Prevents overpressure in boilers and pipelines.</li>
