--- a/steamflowarea.html
+++ b/steamflowarea.html
@@ -598,6 +598,8 @@ strong{
         <li><strong>αw (Outflow Coefficient):</strong> Efficiency factor indicating how well steam exits through the valve.</li>
         <li><strong>PR (Absolute Relieving Pressure in bar a):</strong> The total system pressure at which the valve releases steam.</li>
     </ul>
+    <br>
+    <p><strong>AD-Merkblatt </strong>(Arbeitsgemeinschaft Druckbehälter) is a German standard that provides guidelines for the design, construction, and testing of pressure vessels to ensure safety and compliance with European regulations.</p>
 
     <h3> Real-Life Applications:</h3>
     <ul>
