--- a/backpressurecorrectionfactor.html
+++ b/backpressurecorrectionfactor.html
@@ -584,6 +584,8 @@ strong{
         <li><strong>C1 (Capacity with backpressure applied):</strong> The valve’s performance when there is </strong>pressure resistance</strong> from downstream.</li>
         <li><strong>C2 (Capacity when discharging to atmosphere):</strong> The valve’s performance under </strong>normal atmospheric conditions</strong>.</li>
     </ul>
+    <br>
+    <p><strong>ASME (API RP 520)</strong> stands for American Society of Mechanical Engineers (American Petroleum Institute Recommended Practice 520). It provides guidelines for designing and installing pressure relief systems to protect equipment from excessive pressure in industries like oil & gas and chemical processing.</p>
 
     <h3>Real-Life Applications:</h3>
     <ul>
