--- a/gaugebackpressure.html
+++ b/gaugebackpressure.html
@@ -583,6 +583,8 @@ strong{
         <li><strong>Ps (Set Pressure):</strong> The pressure at which the relief valve is designed to open (measured in psi g).</li>
         <li><strong>Why can't Pb exceed Ps?</strong> If backpressure is too high, the relief valve may not open properly, leading to system failure.</li>
     </ul>
+    <br>
+    <p><strong>ASME (API RP 520)</strong> stands for American Society of Mechanical Engineers (American Petroleum Institute Recommended Practice 520). It provides guidelines for designing and installing pressure relief systems to protect equipment from excessive pressure in industries like oil & gas and chemical processing.</p>
 
     <h3>Real-Life Applications:</h3>
     <ul>
