--- a/nozzlegasconstant.html
+++ b/nozzlegasconstant.html
@@ -589,6 +589,8 @@ strong{
         <li><strong>HVAC and Industrial Airflow:</strong> Regulates airflow and gas emission control in ventilation systems.</li>
         <li><strong>Gas Pipeline Pressure Control:</strong> Used in natural gas and petroleum processing for leak detection.</li>
     </ul>
+    <br>
+    <p><strong>ASME (API RP 520)</strong> stands for American Society of Mechanical Engineers (American Petroleum Institute Recommended Practice 520). It provides guidelines for designing and installing pressure relief systems to protect equipment from excessive pressure in industries like oil & gas and chemical processing.</p>
 
     <h3>Why Can't k be Zero?</h3>
     <p><strong>k cannot be zero</strong> because division by zero is undefined in mathematics, and it would make the formula invalid.</p>
