--- a/safetysubcalculators.html
+++ b/safetysubcalculators.html
@@ -758,6 +758,8 @@
         <div class="button-container" id="calculatorList">
             <a href="accidentrate.html" class="calculator-btn">Accident Rate Calculator</a>
             <a href="averageresolutiontimecalculator.html" class="calculator-btn">Average Resolution Time (ART) Calculator</a>
+            <a href="allowableleakagecalculation.html" class="calculator-btn">Allowable Leakage and Additional Leakage Calculation</a>
+
             <a href="steamflowarea.html" class="calculator-btn">AD-Merkblatt valves - Minimum flow area for steam</a>
             <a href="safetycalculatorminimumflowarea.html" class="calculator-btn">AD-Merkblatt valves - Minimum flow area for Dry Gases And Air</a>
             <a href="asmevalveflowareaestimator.html" class="calculator-btn">ASME (API RP 520) valves - Minimum Flow Area For Liquids Calculator</a>
@@ -765,12 +767,23 @@
             <a href="backpressurecorrectionfactor.html" class="calculator-btn">ASME (API RP 520) valves - Backpressure Correction Factor Calculator</a>
             <a href="gaugebackpressure.html" class="calculator-btn">ASME (API RP 520) valves - Bellows balanced valves Calculator</a>
             <a href="admerkblattvalvesminimumflowareaforliquids.html" class="calculator-btn">AD-MERKBLATT Minimum Flow Area for Liquids Calculator</a>
+            <a href="gaugebackpressureconventionalvalves.html" class="calculator-btn">ASME (API RP 520) valves - Conventional valves Calculator</a>
+            <a href="reynoldsnumber.html" class="calculator-btn">ASME (API RP 520) valves - Reynolds Number- Metric Units Calculator</a>
 
 
+
+
+            <a href="asmevalvesminimumflowareaforsteam.html" class="calculator-btn">ASME (API RP 520) Valves Minimum Flow Area For Steam Calculator</a>
+            <a href="asmevalvesminimumflowareafordrygasandair.html" class="calculator-btn">ASME (API RP 520) Valves - Minimum Flow Area for Dry Gases and Air Calculator</a>
+            <a href="asmevalvereynoldsnumber.HTML" class="calculator-btn">ASME (API RP 520) Valves - Reynolds Number Imperial Units Calculator</a>
+            <a href="bs6759valvesminimumorificeareaforsteam.html" class="calculator-btn">BS-6759 Minimum Orifice Area Calculator for Steam </a>
+            <a href="bs6759valvesminimumorificeareforair.html" class="calculator-btn">BS-6759 Minimum Orifice Area Calculator for Air</a>
 
 
         
-
+            <a href="bs6759valvesminimuorificeareaforliquids.html" class="calculator-btn">BS 6759 Valves Minimum Orifice Area For Liquids Calculator</a>
+            <a href="bs6759valvesminimuorificeareaforhotwater.html" class="calculator-btn">BS 6759 Valves Minimum Orifice Area For Hot Water Calculator</a>
+            <a href="bs6759valvesnozzlegasconstant.html" class="calculator-btn">BS 6759 Valves - Nozzle Gas constant Calculator</a>
             <a href="bitwearefficiencycal.html" class="calculator-btn">Bit Wear and Efficiency Calculator</a>
             <a href="bernoullisequationmultipliedthroughoutbypg.html" class="calculator-btn">Bernoulli's Equation Multiplied Throughout by 'pg' Calculator</a>
             <a href="changeinentropycal.html" class="calculator-btn">Change in Entropy Calculator</a>
@@ -789,6 +802,7 @@
             <a href="coefficientofdischarge.html" class="calculator-btn">Coefficient of Discharge Calculator</a>
             <a href="curtainareaofasafteyvalve.html" class="calculator-btn">Curtain Area of Safety Valve Calculator</a>
 <a href="compressibilityfactorforcompressibilesteam.html" class="calculator-btn">Compressibility Factor For Compressible Steam And Dry Gas Calculator</a>
+<a href="crainliftingcapacityindex.html" class="calculator-btn">Crane Capacity Index (CCI) Calculator</a>
 
 
 
@@ -818,6 +832,8 @@
             <a href="fallcal.html" class="calculator-btn">Fall Clearance Calculator</a>
             <a href="fluidvelocitypitottube.html" class="calculator-btn">Fluid Velocity Calculator (Pitot Tube)</a>
             <a href="flowareaofasafteyvalve.html" class="calculator-btn">Flow Area of Safety Valve Calculator</a>
+            <a href="verticalstresscalcualtor.html" class="calculator-btn">Hydraulic Vertical Pressure Calculator</a>
+
 
 
             <a href="incidentratecal.html" class="calculator-btn">Incidence Rate Calculator</a>
