--- a/footer.html
+++ b/footer.html
@@ -179,7 +179,14 @@
 
 		
 
-
+<!-- WhatsApp Icon -->
+<!-- WhatsApp Icon -->
+<div id="whatsapp-icon" class="whatsapp-icon">
+    <a href="https://api.whatsapp.com/send?phone=7726932023" target="_blank">
+<img src="images/vindus_clients_images/whate.png" alt="whatsapp"	>	
+ <span class="whatsapp-text">WhatsApp</span>
+    </a>
+</div>
 
 
 <!-- FOOTER-3
