new calcualtors added total 15 new

--- a/safetysubcalculators.html
+++ b/safetysubcalculators.html
@@ -767,7 +767,7 @@
             <a href="backpressurecorrectionfactor.html" class="calculator-btn">ASME (API RP 520) valves - Backpressure Correction Factor Calculator</a>
             <a href="gaugebackpressure.html" class="calculator-btn">ASME (API RP 520) valves - Bellows balanced valves Calculator</a>
             <a href="admerkblattvalvesminimumflowareaforliquids.html" class="calculator-btn">AD-MERKBLATT Minimum Flow Area for Liquids Calculator</a>
-            
+
             <a href="gaugebackpressureconventionalvalves.html" class="calculator-btn">ASME (API RP 520) valves - Conventional valves Calculator</a>
             <a href="reynoldsnumber.html" class="calculator-btn">ASME (API RP 520) valves - Reynolds Number- Metric Units Calculator</a>
 
@@ -785,6 +785,17 @@
             <a href="bs6759valvesminimuorificeareaforliquids.html" class="calculator-btn">BS 6759 Valves Minimum Orifice Area For Liquids Calculator</a>
             <a href="bs6759valvesminimuorificeareaforhotwater.html" class="calculator-btn">BS 6759 Valves Minimum Orifice Area For Hot Water Calculator</a>
             <a href="bs6759valvesnozzlegasconstant.html" class="calculator-btn">BS 6759 Valves - Nozzle Gas constant Calculator</a>
+
+
+            <a href="bs6759valvesminimumorificeareafordrygas.html" class="calculator-btn">BS-6759 Minimum Orifice Area Calculator for Dry Gases</a>
+            <a href="bsen-4126valvesminimumorificeareaforairanddrygas.html" class="calculator-btn">BS EN 4126 Minimum Orifice Area Calculator for Air & Dry Gas</a>
+            <a href="bsen-4126valvesminimumorificeareaforliquids.html" class="calculator-btn">BS EN 4126 Minimum Orifice Area Calculator for Liquids</a>
+
+
+           <a href="bsen4126minimumorificareaforsteamairanddrygas.html" class="calculator-btn">BS EN 4126 Valves - Minimum Orifice Area For Steam, Air And Dry Gas At Critical Flow Calculator</a>
+           <a href="bsen4126areaforwetsteamatcrilicalflow.html" class="calculator-btn">BS EN 4126 Valves - Minimum Orifice Area For Wet Steam At Crilical Flow Calculator</a>
+
+
 
             <a href="bitwearefficiencycal.html" class="calculator-btn">Bit Wear and Efficiency Calculator</a>
             <a href="bernoullisequationmultipliedthroughoutbypg.html" class="calculator-btn">Bernoulli's Equation Multiplied Throughout by 'pg' Calculator</a>
@@ -805,6 +816,8 @@
             <a href="curtainareaofasafteyvalve.html" class="calculator-btn">Curtain Area of Safety Valve Calculator</a>
 <a href="compressibilityfactorforcompressibilesteam.html" class="calculator-btn">Compressibility Factor For Compressible Steam And Dry Gas Calculator</a>
 <a href="crainliftingcapacityindex.html" class="calculator-btn">Crane Capacity Index (CCI) Calculator</a>
+<a href="cranewindspeedallowancecalculator.html" class="calculator-btn">Crane Wind Speed Allowance Calculator</a>
+
 
 
 
@@ -835,6 +848,8 @@
             <a href="fluidvelocitypitottube.html" class="calculator-btn">Fluid Velocity Calculator (Pitot Tube)</a>
             <a href="flowareaofasafteyvalve.html" class="calculator-btn">Flow Area of Safety Valve Calculator</a>
             <a href="verticalstresscalcualtor.html" class="calculator-btn">Hydraulic Vertical Pressure Calculator</a>
+            <a href="horizentalstresscalcualtor.html" class="calculator-btn">Horizontal Stress Calculator (Breckels and van Eekelen Model)</a>
+
 
 
 
@@ -884,6 +899,8 @@
             <a href="pressuregradientcalculator.html" class="calculator-btn">Pressure Gradient Calculator</a>
             <a href="potentialenergy.html" class="calculator-btn">Potential Energy Calculator</a>
             <a href="propotionofwaterintwophasedischarge.html"  class="calculator-btn">Proportion of Vapor in Two-Phase Discharge Calculator</a>
+            <a href="porepressurecalculator.html" class="calculator-btn">Pore Pressure Calculator</a>
+
 
 
            
@@ -895,6 +912,9 @@
             <a href="rop.html" class="calculator-btn">Rate of Penetration (ROP) Calculator</a>
             <a href="rheologyviscositycalculator.html" class="calculator-btn">Rheology (Viscosity) Calculator</a>
             <a href="safetyvalveforce.html" class="calculator-btn">Required Opening Force For A Balanced Safety Valve  Calculator</a>
+
+            <a href="reactionforceattheendofsafetyvalveventpipe.html" class="calculator-btn">Reaction Force at the end of Safety Valve Calculator</a>
+
 
 
             <a href="severitycal.html" class="calculator-btn">Severity Rate Calculator</a>
@@ -915,6 +935,10 @@
             <a href="requiredopeningforce.html" class="calculator-btn">Safety Valve Opening Force with the spring housing Calculator</a> 
 <a href="requiredopeningforceatmosphere.html" class="calculator-btn">Safety Valve Opening Force with the spring housing vented atmosphere Calculator </a>
 <a href="requiredopeningforcebuildupbackuppressure.html" class="calculator-btn">Safety Valve Opening Force with the spring housing build-up pressure Calculator</a>
+
+<a href="safetyvalveventpipediameter.html" class="calculator-btn">Safety Valve Vent Pipe Diameter Calculator</a>
+
+<a href="sibaseddarcyequationfordeterminingpressuredropduetofrictionalresistance.html" class="calculator-btn">'SI based D'Arcy Equation For Determining Pressure Drop Due To Frictional Resistance Calculator</a>
 
             <a href="traininghourcal.html" class="calculator-btn">Training Hour Calculation</a>
             <a href="deadloadcal.html" class="calculator-btn">Total Dead Load Calculation (DL)</a>
