--- a/soundpowerlevelatthesafetyvalveoutlet.html
+++ b/soundpowerlevelatthesafetyvalveoutlet.html
@@ -90,7 +90,16 @@
       .input-row .form-group {
         width: 48%;
       }
-  
+      @media (max-width: 768px) {
+    .input-row {
+        flex-direction: column;
+        gap: 5px;
+    }
+
+    .input-row .form-group {
+        width: 100%;
+    }
+}
       .form-group {
         margin-bottom: 15px;
       }
