new calcualtors added today 11-03-2025

--- a/environmentalsubcalculators.html
+++ b/environmentalsubcalculators.html
@@ -788,6 +788,13 @@
 
 
             <a href="flashsteamcalculator.html" class="calculator-btn">Flash Steam Calculator</a>
+
+            <a href="sibasedfrictionfractions.html" class="calculator-btn">Friction Factor Calculator (SI-Based)</a>
+
+            <a href="imperialbasedfrictionfactor.html" class="calculator-btn">Friction Factor Calculator (Imperial-Based)</a>
+
+             <a href="reynoldnumber.html" class="calculator-btn">Friction Factor Calculator (Reynolds-Number)</a>
+
             <a href="heattransferthermoflow.html" class="calculator-btn">Heat Transfer Thermo Flow Calculator</a>
             <a href="heattransfersteam.html" class="calculator-btn">Heat Transfer Rate Calculator (Condensing Steam)</a>
             <a href="heattransferthermoresistance.html" class="calculator-btn">Heat Transfer Thermo Resistance Calculator</a>
@@ -805,6 +812,7 @@
             <a href="recyclingcarbonfootprintcalculator.html" class="calculator-btn">Recycling Carbon Footprint Savings Calculator</a>
             <a href="recyclingimpactcal.html" class="calculator-btn">Recycling Impact Calculator</a>
             <a href="rankineefficiencycalculator.html" class="calculator-btn">Rankine Efficiency Calculator</a>
+            <a href="releativepiperoughness.html" class="calculator-btn">Relative Pipe Roughness Calculator</a>
             
             <a href="specificvolumeofwetsteam.html" class="calculator-btn">Specific Volume Of Wet Steam Calculator</a>
             <a href="steamcondensingrateforhorizontalpipesinstillair.html" class="calculator-btn">Steam Condensing Rate For Horizontal Pipes In Still Air Calculator</a>
