--- a/firesubcalculators.html
+++ b/firesubcalculators.html
@@ -771,13 +771,21 @@
             <a href="fireextinguishercal.html" class="calculator-btn">Fire Extinguisher Placement Calculator</a>
             <a href="fireinspectioncal.html" class="calculator-btn">Fire Extinguisher Weight Inspection</a>
             <a href="firedensitycal.html" class="calculator-btn">Fire Load Density Calculator</a>
+            <a href="fireflowratecalcualtor.html" class="calculator-btn">Fire Flow Calculator </a>
+
             <a href="nethazardcalculator.html" class="calculator-btn">FM-200 / NOVEC 1230 - Net Hazard Volume Calculator</a>
             <a href="agentquantitycalculator.html" class="calculator-btn">FM-200 / NOVEC 1230 - Agent Quantity Calculator</a>
             <a href="nozzlequantityplacementcalculator.html" class="calculator-btn">FM-200 / NOVEC 1230 - Nozzle Quantity Calculator</a>
             <a href="pipesizingcalculator.html" class="calculator-btn">FM-200 / NOVEC 1230 - Pipe Sizing Calculator</a>
             <a href="finaldesignquantityforco2calculator.html" class="calculator-btn">Final Design Quantity For CO₂ Calculator</a>
             <a href="flowratecalculatorforlocalapplicationsystem.html" class="calculator-btn">Flow Rate Calculator For Local Application System</a>
-            <a href="fireflowratecalcualtor.html" class="calculator-btn">Fire Flow Calculator </a>
+            <a href="firealaramsystemsecondbattery.html" class="calculator-btn"> Fire Alarm  System Secondary Battery -Set Calculation</a>
+            <a href="fireoccupancylimit.html" class="calculator-btn"> Fire Safety Occupancy Calculator For Assembly and Recreation Limit</a>
+            <a href="flamablerange.html" class="calculator-btn">Flammable Range Calculator</a>
+
+
+
+
 
             
             <a href="heattransferconductionfourier.html" class="calculator-btn">Heat Transfer By Conduction Calculator (Fourier's Law)</a>
