--- a/qualitysubcalculators.html
+++ b/qualitysubcalculators.html
@@ -765,6 +765,7 @@
             <a href="evaporationfactorofaboilerfromitsfromandatrating.html" class="calculator-btn">Evaporation Factor Of A Boiler From Its 'From & At' Rating Calculator</a>
 
             <a href="electricalresidenceofaconductivityprobe.html" class="calculator-btn">Electrical Resistance Calculator For Conductivity Probe</a>
+            <a href="heatexchangerheatingarea.html" class="calculator-btn">Heat Exchanger Heating Area Calculator</a>
             <a href="MassFlowRateofSteamThroughanOrifice.html" class="calculator-btn">Mass Flow Rate Of Steam Through An Orifice Calculator</a>
             <a href="percentageerrorwhenusingavelocity.html" class="calculator-btn">Percentage Error when using velocity Calculator</a>
             <a href="percentageerrorwhenusingapressure.html" class="calculator-btn">Percentage Error when using pressure Calculator</a>
