--- a/healthsubcalculators.html
+++ b/healthsubcalculators.html
@@ -763,6 +763,9 @@
             <a href="bmrcalculator.html" class="calculator-btn">Basal Metabolic Rate (BMR) Calculator</a>
             
             <a href="drinkcal.html" class="calculator-btn">Daily Drinking Water Intake Calculator</a>
+            <a href="dietaryreferenceintakes.html" class="calculator-btn">Dietary Reference Intake (DRI) Calculator</a>
+
+
             
             <a href="anxietyassessment.html" class="calculator-btn">Generalized Anxiety Disorder Assessment Calculator</a>
             <a href="heatstressindex.html" class="calculator-btn">Heat Stress Index (HSI) Calculator</a>
