--- a/statisticalprocesscontrolchat.html
+++ b/statisticalprocesscontrolchat.html
@@ -198,7 +198,104 @@ select {
         margin:0 10px;
     
     }
+/* Responsive Media Queries */
 
+/* For screens up to 600px (mobile devices) */
+@media (max-width: 600px) {
+    .result-container {
+        display: flex;
+        flex-direction: column;
+    }
+    .result-card {
+        padding: 8px 12px !important;
+        margin: 8px !important;
+    }
+    .result-card h3 {
+        font-size: 14px !important;
+    }
+    .result-card p {
+        font-size: 16px !important;
+    }
+    .feedback-container {
+        padding: 8px !important;
+    }
+    #graphContainer {
+        width: 100% !important;
+        overflow-x: auto;
+        display: flex;
+        justify-content: center;
+    }
+    #spcChart {
+        width: 600px !important;
+        max-width: 100% !important;
+        height: auto !important;
+    }
+}
+
+/* For screens between 601px and 900px (tablets) */
+@media (min-width: 601px) and (max-width: 900px) {
+    .result-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .result-card {
+        padding: 10px 16px !important;
+        margin: 10px !important;
+    }
+    .result-card h3 {
+        font-size: 15px !important;
+    }
+    .result-card p {
+        font-size: 18px !important;
+    }
+    .feedback-container {
+        padding: 10px !important;
+    }
+    #graphContainer {
+        width: 90% !important;
+        display: flex;
+        justify-content: center;
+    }
+    #spcChart {
+        width: 700px !important;
+        max-width: 100% !important;
+        height: auto !important;
+    }
+}
+
+/* For screens larger than 900px (desktops) */
+@media (min-width: 901px) {
+    .result-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .result-card {
+        padding: 10px 20px !important;
+        margin: 10px !important;
+    }
+    .result-card h3 {
+        font-size: 16px !important;
+    }
+    .result-card p {
+        font-size: 20px !important;
+    }
+    .feedback-container {
+        padding: 12px !important;
+    }
+    #graphContainer {
+        width: 80% !important;
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+    }
+    #spcChart {
+        width: 800px !important;
+        max-width: 100% !important;
+        height: auto !important;
+    }
+}
    
 </style>
 	</head>
