today new calcualtors added

--- a/qualitysubcalculators.html
+++ b/qualitysubcalculators.html
@@ -761,15 +761,25 @@
             <a href="boilerhorsepowerfromheattransfersrea.html" class="calculator-btn">Boiler Horse Power From Heat Transfer Area Calculator</a>
 
             <a href="correcttheconductivityofasample.html" class="calculator-btn">Correct The Conductivity Of A Sample Calculator</a>
+            <a href="costofpoorqualitycalculator.html" class="calculator-btn">Cost of Poor Quality (COPQ) Calculator</a>
+
+            <a href="defectspermillionopportunities.html" class="calculator-btn">Defects Per Million Opportunities (DPMO) and Six Sigma  Calculator</a>
+
             <a href="directionalsurvey.html" class="calculator-btn">Directional Survey Calculator</a>
             <a href="evaporationfactorofaboilerfromitsfromandatrating.html" class="calculator-btn">Evaporation Factor Of A Boiler From Its 'From & At' Rating Calculator</a>
 
             <a href="electricalresidenceofaconductivityprobe.html" class="calculator-btn">Electrical Resistance Calculator For Conductivity Probe</a>
+            <a href="firstpassyieldcal.html" class="calculator-btn">First Pass Yield (FPY) Calculator</a>
+
             <a href="heatexchangerheatingarea.html" class="calculator-btn">Heat Exchanger Heating Area Calculator</a>
+            <a href="largestparticlesizethroughastrainerscreen.html" class="calculator-btn">Largest Particle Size Through a Strainer Screen Calculator</a>
+
             <a href="MassFlowRateofSteamThroughanOrifice.html" class="calculator-btn">Mass Flow Rate Of Steam Through An Orifice Calculator</a>
             <a href="percentageerrorwhenusingavelocity.html" class="calculator-btn">Percentage Error when using velocity Calculator</a>
             <a href="percentageerrorwhenusingapressure.html" class="calculator-btn">Percentage Error when using pressure Calculator</a>
             <a href="thepressuredropforaliquidequalsthefrictionloss.html" class="calculator-btn">Pressure Drop & Friction Loss Calculator</a>
+            <a href="processcapabilitycpcpk.html" class="calculator-btn"> Process Capability (Cp, Cpk) Calculator</a>
+
 
             <a href="relatingboilerpressuretoheattransferrate.html" class="calculator-btn">Relating Boiler Pressure To Heat Transfer Rate Calculator</a>
             <a href="todeterminereynoldsnumberofafluid.html" class="calculator-btn">Reynolds Number Calculator</a>
@@ -779,6 +789,9 @@
             <a href="steamconsumptionofdryingcylinders.html" class="calculator-btn">Steam Consumption Of Drying Cylinders Calculator</a>
             <a href="Velocity of Steam Passing ThroughanOrificequality.html" class="calculator-btn">Steam Velocity Calculator Through An Orifice</a>
             <a href="todeterminedensityofsteam.html" class="calculator-btn">Steam Density Calculator (Using Dryness Fraction)</a>
+            <a href="statisticalprocesscontrolchat.html" class="calculator-btn">Statistical Process Control (SPC) Chart Calculator</a>
+            <a href="secondaryfluidoutlettemperatureatanyload.html" class="calculator-btn">Secondary Fluid Outlet Temperature At Any Load Calculator</a>
+
 
             <a href="turndownratioofasteamflowmeter.html" class="calculator-btn">Turndown Ratio Of A Steam Flowmeter Calculator</a>
             <a href="vortexsheddingfrequency.html" class="calculator-btn">Vortex Shedding Frequency Calculator</a>
