--- a/safetysubcalculators.html
+++ b/safetysubcalculators.html
@@ -842,6 +842,7 @@
             <a href="fluidlosscalculator.html" class="calculator-btn">Fluid Loss Calculator for Drilling</a>
             <a href="fracturegradientcalculator.html" class="calculator-btn">Fracture Gradient Calculator</a>
             <a href="fracturewidthcalculator.html" class="calculator-btn">Fracture Width Calculator (PKN Model)</a>
+            <a href="fracturevolumecalculatorpkn.html" class="calculator-btn">Fracture Volume Calculator (PKN Model)</a>
 
 
 
